fixed release date in movie list. Excluded duration
